--- a/index.html
+++ b/index.html
@@ -1,1 +1,277 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cyrus.fun</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
+        body {
+            background-color: black;
+            color: #84898E;
+            font-family: monospace, Arial, sans-serif;
+            text-transform: uppercase;
+            line-height: 1.5;
+            font-size: 16px;
+        }
+
+        header {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            z-index: 10;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .shop-link {
+            color: white;
+            text-decoration: none;
+        }
+
+        .logo-button {
+            background-color: #00ff00;  /* Changed to green */
+            padding: 10px;
+            width: 50px;
+            height: 50px;
+            border: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-family: monospace;
+            font-weight: bold;
+            font-size: 20px;
+            color: black;
+        }
+
+        .logo-button:hover {
+            background-color: transparent;
+            color: #00ff00;
+        }
+
+        main {
+            max-width: 100%;
+            padding: 60px 15px 20px;
+            width: 100%;
+        }
+
+        section {
+            border-left: 3px solid;
+            padding: 0 15px 20px;
+            margin-bottom: 20px;
+        }
+
+        .projects-previous {
+            border-color: rgba(0, 255, 0, 0.3);  /* Changed to green */
+        }
+
+        .projects-new {
+            border-color: #00ff00;  /* Changed to green */
+            color: #00ff00;
+        }
+
+        .subscription {
+            border-color: #00ff00;  /* Changed to green */
+            color: #00ff00;
+        }
+
+        .row {
+            display: flex;
+            flex-wrap: nowrap;
+            margin-bottom: 10px;
+            align-items: flex-start;
+        }
+
+        .left {
+            flex-shrink: 0;
+            width: 40px;
+            font-size: 14px;
+            padding-right: 10px;
+        }
+
+        .right {
+            flex-grow: 1;
+            overflow: hidden;
+            padding-top: 2px;
+        }
+
+        a {
+            color: inherit;
+            text-decoration: none;
+            display: block;
+            padding: 5px 0;
+        }
+
+        a:hover, a:active {
+            color: white;
+        }
+
+        .email-form {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            align-items: center;
+        }
+
+        .email-input {
+            background: transparent;
+            border: none;
+            color: #00ff00;  /* Changed to green */
+            font: inherit;
+            height: 40px;
+            width: calc(100% - 50px);
+            text-transform: uppercase;
+            outline: none;
+        }
+
+        .email-form button {
+            background: none;
+            border: none;
+            color: inherit;
+            font-size: 20px;
+            cursor: pointer;
+            padding: 5px 10px;
+        }
+
+        .email-form button:hover {
+            color: white;
+        }
+
+        /* Mobile Specific Styles */
+        @media (max-width: 500px) {
+            body {
+                font-size: 18px;
+            }
+
+            header {
+                top: 15px;
+                right: 15px;
+            }
+
+            .shop-link {
+                display: none;
+            }
+
+            .logo-button {
+                width: 60px;
+                height: 60px;
+                padding: 12px;
+                font-size: 24px;
+            }
+
+            main {
+                padding-top: 90px;
+            }
+
+            section {
+                border-left-width: 4px;
+                padding: 0 12px 15px;
+            }
+
+            .left {
+                font-size: 16px;
+                width: 50px;
+            }
+
+            .right {
+                width: calc(100% - 50px);
+            }
+
+            .email-form {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .email-input {
+                width: 100%;
+                font-size: 16px;
+                height: 50px;
+            }
+
+            a {
+                padding: 8px 0;
+            }
+
+            .email-form button {
+                padding: 8px 15px;
+            }
+        }
+
+        .mobile-shop {
+            display: none;
+            position: fixed;
+            bottom: 15px;
+            right: 15px;
+            color: white;
+            text-decoration: none;
+            z-index: 10;
+        }
+
+        @media (max-width: 500px) {
+            .mobile-shop {
+                display: block;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <a href="#" class="shop-link">Projects↗</a>
+        <button class="logo-button">CYRUS</button>
+    </header>
+
+    <main>
+        <section class="projects-previous">
+            <div class="row">
+                <div class="left">#<br>1</div>
+                <div class="right">
+                    <a href="#">Personal Portfolio</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="left">#<br>2</div>
+                <div class="right">
+                    <a href="#">Subject Matter Expertise</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="left">#<br>3</div>
+                <div class="right">
+                    <a href="#">Digital Art</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="projects-new">
+            <div class="row">
+                <div class="left">#<br>4</div>
+                <div class="right">
+                    <a href="#">Latest Project↗</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="subscription">
+            <div class="row">
+                <div class="left">>><br>>></div>
+                <div class="right">
+                    <form class="email-form">
+                        <label for="email">Contact me:</label>
+                        <input type="email" id="email" class="email-input" placeholder="YOUR@EMAIL.COM">
+                        <button type="submit">→</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <a href="#" class="mobile-shop">Projects↗</a>
+</body>
+</html>
