--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <body>
     <header>
         <a href="#" class="shop-link">Projects↗</a>
-        <button class="logo-button">CYRUS</button>
+        <button class="logo-button">CT</button>
     </header>
 
     <main>
