--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <body>
     <header>
         <a href="#" class="shop-link">Projects↗</a>
-        <button class="logo-button">CT</button>
+        <button class="logo-button">CF</button>
     </header>
 
     <main>
@@ -238,13 +238,13 @@
             <div class="row">
                 <div class="left">#<br>2</div>
                 <div class="right">
-                    <a href="#" class="scramble-text" data-text="Web Development">Subject Matter Expertise</a>
+                    <a href="#" class="scramble-text" data-text="Subject Matter Expertise">Subject Matter Expertise</a>
                 </div>
             </div>
             <div class="row">
                 <div class="left">#<br>3</div>
                 <div class="right">
-                    <a href="#" class="scramble-text" data-text="Digital Art">Current Thoughts</a>
+                    <a href="#" class="scramble-text" data-text="Current Thoughts">Current Thoughts</a>
                 </div>
             </div>
         </section>
@@ -263,7 +263,7 @@
                 <div class="left">>><br>>></div>
                 <div class="right">
                     <form class="email-form">
-                        <label for="email">Contact Me:</label>
+                        <label for="email">Enter e-mail:</label>
                         <input type="email" id="email" class="email-input" placeholder="YOUR@EMAIL.COM">
                         <button type="submit">→</button>
                     </form>
