--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <body>
     <header>
         <a href="#" class="shop-link">Projects↗</a>
-        <button class="logo-button">CF</button>
+        <button class="logo-button">CY</button>
     </header>
 
     <main>
@@ -253,7 +253,7 @@
             <div class="row">
                 <div class="left">#<br>4</div>
                 <div class="right">
-                    <a href="#" class="scramble-text" data-text="Latest Project↗">Latest Project↗</a>
+                    <a href="https://aces.fun/" class="scramble-text" data-text="Latest Project↗">Latest Project↗</a>
                 </div>
             </div>
         </section>
