--- a/index.html
+++ b/index.html
@@ -149,6 +149,107 @@
             min-width: 10ch;
         }
 
+        /* Footer Styles */
+        .footer {
+            position: fixed;
+            bottom: 15px;
+            left: 0;
+            right: 0;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 15px;
+            color: #84898E;
+            font-size: 14px;
+            z-index: 10;
+        }
+
+        .footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            display: flex;
+            justify-content: space-between;
+            padding: 15px;
+            color: #84898E;
+            font-size: 14px;
+            z-index: 10;
+            height: 50px;  /* Increased height */
+            background: black;
+        }
+
+        .footer-left {
+            color: #00ff00;
+            display: flex;
+            gap: 20px;
+            align-items: center;
+        }
+        
+        .location {
+            color: #84898E;
+            min-width: 150px;
+        }
+
+        #clock {
+            color: #00ff00;
+            display: flex;
+            align-items: center;
+            height: 3em;  /* Increased height for slots */
+            line-height: 1em;
+        }
+
+        .digit-container {
+            display: inline-block;
+            height: 3em;  /* Increased height */
+            overflow: hidden;
+            width: 0.7em;
+            position: relative;
+            vertical-align: middle;
+            background: rgba(0, 255, 0, 0.05);  /* Slight background to see container */
+        }
+
+        .rolling-digits {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            transition: transform 0.3s ease-in-out;
+            text-align: center;
+            left: 0;
+            right: 0;
+        }
+
+        .last-second {
+            height: 1em;
+            line-height: 1em;
+            text-align: center;
+            display: block;
+            margin: 0;
+            padding: 0;
+        }
+
+        .static-time {
+            display: inline-flex;
+            align-items: center;
+            height: 1em;
+            line-height: 1em;
+        }
+
+        .footer-right {
+            display: flex;
+            gap: 20px;
+            align-items: center;
+        }
+
+        .footer a {
+            color: #84898E;
+            text-decoration: none;
+            padding: 5px 0;
+        }
+
+        .footer a:hover {
+            color: #00ff00;
+        }
+
         @media (max-width: 500px) {
             body {
                 font-size: 18px;
@@ -201,6 +302,14 @@
 
             .email-form button {
                 padding: 8px 15px;
+            }
+
+            .footer {
+                bottom: 50px;
+            }
+
+            .clock {
+                bottom: 50px;
             }
         }
 
@@ -272,6 +381,17 @@
         </section>
     </main>
 
+    <div class="footer">
+        <div class="footer-left">
+            <div id="clock"></div>
+            <div id="location" class="location"></div>
+        </div>
+        <div class="footer-right">
+            <a href="/privacy">PP</a>
+            <a href="/terms">Terms</a>
+        </div>
+    </div>
+
     <a href="#" class="mobile-shop">Projects↗</a>
 
     <script>
@@ -321,6 +441,39 @@
             const randomText = scrambleTexts[Math.floor(Math.random() * scrambleTexts.length)];
             scrambleText(randomText);
         }, 3000);
+
+        // Clock functionality
+        function updateClock() {
+            const now = new Date();
+            let hours = now.getHours().toString().padStart(2, '0');
+            let minutes = now.getMinutes().toString().padStart(2, '0');
+            let seconds = now.getSeconds().toString().padStart(2, '0');
+            const timeString = `${hours}:${minutes}:${seconds}`;
+            document.getElementById('clock').textContent = timeString;
+        }
+
+        // Get user timezone location
+        function getTimezoneLocation() {
+            try {
+                const timeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
+                // Convert "America/New_York" to "NEW YORK"
+                const city = timeZone.split('/').pop().replace(/_/g, ' ').toUpperCase();
+                document.getElementById('location').textContent = city;
+                console.log('Timezone location:', city);
+            } catch (error) {
+                console.error('Error getting timezone:', error);
+                document.getElementById('location').textContent = '';
+            }
+        }
+
+        // Call getTimezoneLocation immediately
+        getTimezoneLocation();
+
+        // Update clock immediately
+        updateClock();
+
+        // Update clock every second
+        setInterval(updateClock, 1000);
     </script>
 </body>
 </html>
