--- a/thoughts.html
+++ b/thoughts.html
@@ -241,13 +241,11 @@
     <main>
         <section class="thoughts-section">
             <div class="thought-entry">
-                <div class="thought-title">ON ARTIFICIAL INTELLIGENCE</div>
+                <div class="thought-title">MONEY</div>
                 <div class="thought-content">
-                    EXPLORING THE INTERSECTION OF HUMAN CREATIVITY AND MACHINE LEARNING. 
-                    THE FUTURE OF DESIGN LIES NOT IN REPLACEMENT, BUT IN AUGMENTATION 
-                    AND COLLABORATION BETWEEN HUMAN INTUITION AND COMPUTATIONAL POWER.
+                    MONEY IS BREAKING THE SIMULATION FAST. PROBABLY BECAUSE EVERYTHING IS OPTIMIZED TO BE CHEAPER. AND YOU GET WHAT YOU PAY FOR. WHICH CREATES A CHEAP SIMULATION.
                 </div>
-                <div class="thought-date">20 FEB 2025 14:30</div>
+                <div class="thought-date">20 FEB 2025</div>
             </div>
 
             <div class="thought-entry">
@@ -260,15 +258,6 @@
                 <div class="thought-date">19 FEB 2025 09:15</div>
             </div>
 
-            <div class="thought-entry">
-                <div class="thought-title">THE FUTURE OF WEB DESIGN</div>
-                <div class="thought-content">
-                    BREAKING FREE FROM TEMPLATE THINKING. EMBRACING UNIQUE DIGITAL 
-                    EXPERIENCES THAT CHALLENGE CONVENTIONS WHILE MAINTAINING 
-                    USABILITY AND PURPOSE.
-                </div>
-                <div class="thought-date">18 FEB 2025 16:45</div>
-            </div>
         </section>
     </main>
 
