--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="row">
                 <div class="left">#<br>3</div>
                 <div class="right">
-                    <a href="#" class="scramble-text" data-text="Current Thoughts">Current Thoughts</a>
+                    <a href="https://cyrus.fun/thoughts" class="scramble-text" data-text="Current Thoughts">Current Thoughts</a>
                 </div>
             </div>
         </section>
