--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://cyrus.fun/images/CYlogo.png" type="image/png">
+
+    <!-- Open Graph (Facebook) -->
+    <meta property="og:image" content="https://cyrus.fun/images/CYlogo.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://cyrus.fun/images/CYlogo.png">
+</head>
+
     <title>cyrus.fun</title>
     <style>
         * {
