--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="shop-link">Projects↗</a>
+        <a href="https://calendly.com/cyruskind" class="shop-link">BOOK↗</a>
         <button class="logo-button">CY</button>
     </header>
 
@@ -407,7 +407,7 @@
         </div>
     </div>
 
-    <a href="#" class="mobile-shop">Projects↗</a>
+    <a href="https://calendly.com/cyruskind" class="mobile-shop">BOOK↗</a>
 
     <script>
         const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#$%&';
