--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 </head>
 <body>
     <header>
-        <a href="https://calendly.com/cyruskind" class="shop-link">BOOK↗</a>
+        <a href="https://calendly.com/cyruskind" class="shop-link" target="_blank">BOOK↗</a>
         <button class="logo-button">CY</button>
     </header>
 
