--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://cyrus.fun/images/CYlogo.png">
-</head>
 
     <title>cyrus.fun</title>
     <style>
@@ -386,9 +385,9 @@
             <div class="row">
                 <div class="left">>><br>>></div>
                 <div class="right">
-                    <form class="email-form">
+                    <form class="email-form" action="https://docs.google.com/forms/d/1f5_tSkdjIbWo-P7gIZKSW4lBp9hMVPvWmLcZ7E17Yx4/formResponse" method="POST" target="_blank">
                         <label for="email">Enter e-mail:</label>
-                        <input type="email" id="email" class="email-input" placeholder="YOUR@EMAIL.COM">
+                        <input type="email" name="entry.760550934" id="email" class="email-input" placeholder="YOUR@EMAIL.COM" required>
                         <button type="submit">→</button>
                     </form>
                 </div>
