--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <div class="row">
                 <div class="left">#<br>2</div>
                 <div class="right">
-                    <a href="#" class="scramble-text" data-text="Subject Matter Expertise">Subject Matter Expertise</a>
+                    <a href="/expertise" class="scramble-text" data-text="Subject Matter Expertise">Subject Matter Expertise</a>
                 </div>
             </div>
             <div class="row">
@@ -386,7 +386,7 @@
                 <div class="left">>><br>>></div>
                 <div class="right">
                     <form class="email-form">
-                        <label for="email">Enter e-mail:</label>
+                        <label for="email">Enter E-mail:</label>
                         <input type="email" name="entry.760550934" id="email" class="email-input" placeholder="YOUR@EMAIL.COM" required>
                         <button type="submit">→</button>
                     </form>
@@ -468,7 +468,7 @@
                 formData.append('entry.760550934', email);
                 
                 // First try - direct POST
-                await fetch('https://docs.google.com/forms/d/1f5_tSkdjIbWo-P7gIZKSW4lBp9hMVPvWmLcZ7E17Yx4/formResponse', {
+                await fetch('https://docs.google.com/forms/d/e/1f5_tSkdjIbWo-P7gIZKSW4lBp9hMVPvWmLcZ7E17Yx4/formResponse', {
                     method: 'POST',
                     mode: 'no-cors',
                     headers: {
