--- a/index.html
+++ b/index.html
@@ -385,11 +385,12 @@
             <div class="row">
                 <div class="left">>><br>>></div>
                 <div class="right">
-                    <form class="email-form">
+                    <form class="email-form" action="https://docs.google.com/forms/d/e/1f5_tSkdjIbWo-P7gIZKSW4lBp9hMVPvWmLcZ7E17Yx4/formResponse" method="POST" target="hidden_iframe">
                         <label for="email">Enter e-mail:</label>
                         <input type="email" name="entry.760550934" id="email" class="email-input" placeholder="YOUR@EMAIL.COM" required>
                         <button type="submit">→</button>
                     </form>
+                    <iframe name="hidden_iframe" style="display:none;"></iframe>
                 </div>
             </div>
         </section>
