--- a/index.html
+++ b/index.html
@@ -49,17 +49,7 @@
             pointer-events: auto;
         }
 
-        /* Add a semi-transparent overlay to help text readability */
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 1;
-            pointer-events: none;
-        }
+
 
         header {
             position: fixed;
@@ -109,9 +99,6 @@
             border-left: 3px solid;
             padding: 0 15px 20px;
             margin-bottom: 20px;
-            background-color: rgba(0, 0, 0, 0.7);
-            backdrop-filter: blur(5px);
-            -webkit-backdrop-filter: blur(5px);
         }
 
         .projects-previous {
@@ -208,9 +195,7 @@
             font-size: 14px;
             z-index: 10;
             height: 50px;  /* Increased height */
-            background: rgba(0, 0, 0, 0.8);
-            backdrop-filter: blur(5px);
-            -webkit-backdrop-filter: blur(5px);
+            background: black;
         }
 
         .footer-left {
@@ -371,8 +356,7 @@
         <spline-viewer url="https://prod.spline.design/HSIBHvvqJr1YVmCM/scene.splinecode"></spline-viewer>
     </div>
     
-    <!-- Semi-transparent overlay for better readability -->
-    <div class="overlay"></div>
+
 
     <header>
         <a href="https://calendly.com/cyruskind" class="shop-link" target="_blank">BOOK↗</a>
