--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>DrSam.fun - Making Gut Health Fun!</title>
     <style>
         :root {
-            --primary: #ff6b6b;
-            --secondary: #4ecdc4;
-            --dark: #1a535c;
-            --light: #f7fff7;
-            --accent: #ffe66d;
+            --primary: #A68353;
+            --secondary: #4A7361;
+            --dark: #333333;
+            --light: #F9F6F0;
+            --accent: #D4C3A3;
         }
 
         * {
@@ -96,7 +96,7 @@
             display: flex;
             align-items: center;
             padding: 0 5%;
-            background: linear-gradient(135deg, var(--dark) 0%, #2a7d8a 100%);
+            background: linear-gradient(135deg, var(--dark) 0%, var(--secondary) 100%);
             color: var(--light);
             position: relative;
             overflow: hidden;
@@ -133,9 +133,9 @@
         }
 
         .btn:hover {
-            background-color: #ff5252;
+            background-color: #8e7047;
             transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 20px rgba(166, 131, 83, 0.2);
         }
 
         .btn.secondary {
@@ -248,7 +248,7 @@
 
         .service-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+            box-shadow: 0 15px 30px rgba(166, 131, 83, 0.2);
         }
 
         .service-icon {
@@ -605,7 +605,7 @@
             <a href="#services" class="btn">Explore Services</a>
             <a href="#contact" class="btn secondary">Book Consultation</a>
         </div>
-        <div class="hero-illustration" id="gutAnimation">
+        <div class="hero-illustration" id="gutAnimation" style="background-image: url('https://static.wixstatic.com/media/11062b_50fb8e4c58be4d01879b1ddaf5e80d7d~mv2.jpg/v1/fill/w_980,h_551,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/11062b_50fb8e4c58be4d01879b1ddaf5e80d7d~mv2.jpg'); background-size: cover; background-position: center; opacity: 0.3;">
             <!-- Microbes will be added via JavaScript -->
         </div>
     </section>
@@ -624,7 +624,7 @@
                 <a href="#services" class="btn">See My Approach</a>
             </div>
             <div class="about-image">
-                <img src="/api/placeholder/400/320" alt="Dr. Sam" />
+                <img src="https://static.wixstatic.com/media/11062b_b75590647e6c45eda5780cf7e307fd1d~mv2.jpg/v1/fill/w_574,h_511,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Image-empty-state.jpg" alt="Dr. Sam" />
             </div>
         </div>
     </section>
@@ -683,7 +683,7 @@
             <div class="testimonial">
                 <p class="testimonial-text">After years of bloating and discomfort, Dr. Sam's approach changed everything. The personalized plan was easy to follow, and for the first time, I actually enjoyed the process of healing my gut. Within weeks I felt like a new person!</p>
                 <div class="testimonial-author">
-                    <img src="/api/placeholder/60/60" alt="Client" />
+                    <img src="https://static.wixstatic.com/media/11062b_b4859e3ad5d343e2add1d2fbfee10096~mv2.jpg/v1/crop/x_0,y_0,w_960,h_960/fill/w_102,h_102,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/fullsizeoutput_1.jpg" alt="Client" />
                     <div class="author-info">
                         <h4>Jessica K.</h4>
                         <p>Relieved IBS symptoms</p>
@@ -693,7 +693,7 @@
             <div class="testimonial">
                 <p class="testimonial-text">Dr. Sam makes complex gut science feel simple and actionable. I never thought gut health could be fun, but the interactive approach kept me engaged and motivated. My energy levels are through the roof now!</p>
                 <div class="testimonial-author">
-                    <img src="/api/placeholder/60/60" alt="Client" />
+                    <img src="https://static.wixstatic.com/media/11062b_7fc2a53bdb7a46c0806d94c393af6e3c~mv2.jpg/v1/fill/w_102,h_102,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/Dr_%20Thomas%20Platia%20(1).jpg" alt="Client" />
                     <div class="author-info">
                         <h4>Marcus T.</h4>
                         <p>Increased energy & performance</p>
